--- a/README
+++ b/README
@@ -3,6 +3,8 @@
 
 Code to generate a natural language summary for a line graph.
 
+To see an example, see http://personal.psu.edu/szr163/hassan/hassan-Figure-2.html
+
 Data is too large for github, available on request (sagnik@psu.edu).
 
 
